--- a/templates/result.html
+++ b/templates/result.html
@@ -13,9 +13,9 @@
     </div>
     </header>
     
-    <p style="color:blue;font-size:20;text-align: center;"><b>Your prediction is:</b></p>
-    <div id="results">
-    <p>{{ prediction }}.</p>
+    <p style="color:black;font-size:20;"><b>Your prediction is:</b></p>
+        <div id="results">
+    <p style="color:red;font-size:20;">{{ prediction }}.</p>
     </div>
 
 </body>
