--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Sentiment app</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    
 </head>
 
 <body>
-
+     
      <header>
-            <div class="container>
+            <div class="container">
             <div class="centered"> 
             <header class="text-center text-white">
             <h1 class="header"> Sentiment Analysis App</h1>
@@ -17,7 +18,7 @@
     <div/>
     <header/>
     
-    <div class="ml-container">
+    <div class="container">
     
          <form action="/result" method = "POST"> 
          <p class="desc">Type a your review and click on the submit button</p>
