added some changes

--- a/templates/result.html
+++ b/templates/result.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Sentiment app</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
-    <h1>Sentiment Analysis App</h1>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/styles.css') }}"/>
+    <h1>Welcome to the Review Analyzer!</h1>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to the Review Analyzer</h1>
             <h2>Sentiment analysis for clothes reviews</h2>
         </div>
     </header>
